--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/vickycxc/al-fatih-assistant/issues"
   },
-  "homepage": "https://github.com/vickycxc/al-fatih-assistant#readme"
+  "homepage": "https://github.com/vickycxc/al-fatih-assistant#readme",
+  "dependencies": {
+    "whatsapp-web.js": "^1.9.0"
+  }
 }
